[cleanup] replaced all collect(to.list) with toList invocations
on the touched files also instanceof and other sonar reported issues
where fixed.

Change-Id: Ic0b460b8d868b941f5ddc525a26ef31e754ed611